--- a/client/branded/src/global-styles/colors.scss
+++ b/client/branded/src/global-styles/colors.scss
@@ -41,10 +41,6 @@ $color-text: #f2f4f8;
 $color-text-1: #a2b0cd;
 $color-text-2: #f2f4f8;
 $color-text-3: #ffffff;
-$color-border: #2b3750;
-$color-border-hover: #566e9f;
-
-$color-border-active: #329af0;
 
 // TODO add Basics color standards to Dark Theme
 
@@ -115,6 +111,8 @@ $body-bg-color-dark: #04070e;
     --warning: #{$warning};
     --danger: #{$danger};
     --merged: #{$merged};
+}
+.theme-light {
     --body-color: #{$body-color-light};
     --body-bg: #{$body-bg-color-light};
     --color-bg-1: #{$color-light-bg-1};
@@ -125,14 +123,14 @@ $body-bg-color-dark: #04070e;
     --link-color: #{$gray-13};
     --link-active-color: #{$gray-18};
     --link-hover-color: #{$gray-21};
-    --color-border: #{$color-light-border};
-    --color-border-2: #{$color-light-border-2};
+    --border-color: #{$color-light-border};
+    --border-color-2: #{$color-light-border-2};
     --sourcegraph-logo-text-color: #242427;
 }
 .theme-dark {
     --secondary: #{$secondary};
-    --color-border: #{$color-border};
-    --color-border-2: #{$color-border};
+    --border-color: #{$color-bg-3};
+    --border-color-2: #{$color-bg-3};
     --body-color: #{$body-color-dark};
     --body-bg: #{$body-bg-color-dark};
     --color-bg-1: #{$color-bg-1};
