--- a/client/web/src/auth/OrDivider.scss
+++ b/client/web/src/auth/OrDivider.scss
@@ -3,6 +3,6 @@
     font-size: 0.75rem; /* stylelint-disable-line declaration-property-unit-whitelist */
 
     &__border {
-        border-bottom: 1px solid var(--color-border-2);
+        border-bottom: 1px solid var(--border-color-2);
     }
 }
