--- a/client/web/src/search/input/toggles/Toggles.scss
+++ b/client/web/src/search/input/toggles/Toggles.scss
@@ -9,7 +9,7 @@
         }
         border: 1px solid transparent;
         &--active {
-            border: 1px solid $color-border-active;
+            border: 1px solid var(--primary);
             border-radius: 2px;
             .theme-dark & {
                 background: $color-bg-5;
