--- a/client/branded/src/components/panel/Panel.scss
+++ b/client/branded/src/components/panel/Panel.scss
@@ -10,7 +10,7 @@
     flex-direction: column;
 
     background-color: $color-bg-4;
-    border-top: 1px solid $color-border;
+    border-top: 1px solid var(--border-color);
     width: 100%;
 
     &--resizable {
@@ -54,6 +54,5 @@
 .theme-light {
     .panel {
         background-color: $color-light-bg-2;
-        border-top-color: $color-light-border;
     }
 }
