--- a/client/branded/src/global-styles/dropdown.scss
+++ b/client/branded/src/global-styles/dropdown.scss
@@ -6,7 +6,7 @@
 
 .theme-dark {
     --dropdown-bg: #0e121b;
-    --dropdown-border-color: #{$color-border};
+    --dropdown-border-color: var(--border-color);
     --dropdown-link-hover-bg: #{$color-bg-2};
     --dropdown-header-color: #{$color-text-1};
     .dropdown-menu {
@@ -17,7 +17,7 @@
 
 .theme-light {
     --dropdown-bg: #ffffff;
-    --dropdown-border-color: #{$color-light-border};
+    --dropdown-border-color: var(--border-color);
     --dropdown-link-hover-bg: #{$color-light-bg-2};
     --dropdown-header-color: #{$color-light-text-2};
     .dropdown-menu {
