--- a/client/browser/src/browser-extension/options-menu/OptionsPage.scss
+++ b/client/browser/src/browser-extension/options-menu/OptionsPage.scss
@@ -7,7 +7,7 @@
 
     &__section {
         padding: 1rem;
-        border-bottom: 1px solid var(--color-border-2);
+        border-bottom: 1px solid var(--border-color-2);
 
         &:last-of-type {
             border-bottom: none;
@@ -17,7 +17,7 @@
     &__split-section-part {
         padding: 0.75rem 1rem;
         flex: 50%;
-        border-left: 1px solid var(--color-border-2);
+        border-left: 1px solid var(--border-color-2);
         text-align: center;
         &:first-child {
             border-left: none;
