--- a/client/web/src/auth/SignInSignUpPageCommon.scss
+++ b/client/web/src/auth/SignInSignUpPageCommon.scss
@@ -11,7 +11,7 @@
 .signin-signup-form {
     max-width: calc(100vw - 2rem);
     background-color: var(--color-bg-1);
-    border: 1px solid var(--color-border-2);
+    border: 1px solid var(--border-color-2);
 
     &__input-container {
         position: relative;
