--- a/client/web/src/components/FilteredConnection.scss
+++ b/client/web/src/components/FilteredConnection.scss
@@ -40,7 +40,7 @@
         flex: 0 0;
         padding: $popover-item-padding-v $popover-item-padding-h;
         opacity: 0.7;
-        border-top: solid 1px $color-border;
+        border-top: solid 1px var(--border-color);
     }
 
     &--noncompact {
@@ -62,13 +62,5 @@
 
     &__show-more {
         flex: 0 0 auto;
-    }
-}
-
-.theme-light {
-    .filtered-connection {
-        &--compact .filtered-connection__summary {
-            border-color: $color-light-border;
-        }
     }
 }
