--- a/client/web/src/marketing/Toast.scss
+++ b/client/web/src/marketing/Toast.scss
@@ -9,7 +9,7 @@
     border-radius: 0.25rem;
     background-color: $color-bg-2;
     color: $color-text-2;
-    border: 1px solid $color-border;
+    border: 1px solid var(--border-color);
 
     &__logo {
         flex: 0 0 auto;
@@ -65,7 +65,6 @@
 
 .theme-light {
     .toast {
-        border: 1px solid $color-light-border;
         background-color: $color-light-bg-2;
         color: $color-light-text-1;
 
