--- a/client/web/src/repo/GitReferenceTag.scss
+++ b/client/web/src/repo/GitReferenceTag.scss
@@ -6,7 +6,7 @@
     padding: 0 0.175rem;
     margin: 0 0.175rem;
 
-    border: solid 1px rgba(255, 255, 255, 0.3);
+    border: solid 1px var(--border-color);
     border-radius: 0.125rem;
 
     .icon-git-hub {
@@ -27,10 +27,6 @@
 }
 
 .theme-light {
-    .git-ref-tag {
-        border-color: $color-light-border;
-    }
-
     .git-ref-tag-2 {
         background-color: saturate(lighten($color-light-bg-5, 48.5%), 50%);
     }
