--- a/client/web/src/repo/RepoHeader.scss
+++ b/client/web/src/repo/RepoHeader.scss
@@ -5,6 +5,7 @@
     flex: none;
     padding: 0;
     align-items: stretch;
+    border-color: var(--border-color);
     border-style: solid;
     border-width: 0 0 1px;
 
@@ -75,13 +76,5 @@
 
     &__spacer {
         flex: 1 1 0;
-    }
-
-    .theme-dark & {
-        border-color: #233043;
-    }
-
-    .theme-light & {
-        border-color: $color-light-border;
     }
 }
