--- a/client/web/src/search/FilterChip.scss
+++ b/client/web/src/search/FilterChip.scss
@@ -3,26 +3,25 @@
     border-radius: 2px;
     margin: 0.25rem 0.5rem 0.25rem 0;
 
+    border-color: var(--border-color-2);
+
     .theme-dark & {
         background: $color-bg-2;
-        border-color: $color-border;
         color: $color-text-1;
     }
     .theme-light & {
         color: $color-light-text-1;
         background: transparent;
-        border-color: $color-light-border-2;
     }
 
     &:hover:not(&--selected) {
+        border-color: var(--border-color);
         .theme-dark & {
             background: $color-bg-3;
-            border-color: $color-bg-3;
             color: #ffffff;
         }
         .theme-light & {
             background: $color-light-bg-4;
-            border-color: $color-light-bg-4;
             color: $color-light-text-6;
         }
     }
@@ -56,14 +55,13 @@
     }
 
     &--selected {
+        border-color: var(--border-color);
         .theme-dark & {
             color: $color-text;
             background: $color-bg-5;
-            border-color: $color-bg-5;
         }
         .theme-light & {
             background: $color-light-bg-3;
-            border-color: $color-light-border;
         }
     }
 }
