--- a/client/web/src/search/input/MonacoQueryInput.scss
+++ b/client/web/src/search/input/MonacoQueryInput.scss
@@ -55,11 +55,10 @@
             font-size: 0.65rem;
             line-height: 1;
             padding: 0.25rem 0.375rem;
-            border-color: $gray-13;
+            border-color: var(--border-color);
             color: $color-text-1;
 
             .theme-light & {
-                border-color: $color-light-border;
                 color: $color-light-text-3;
             }
         }
