--- a/client/web/src/search/results/SearchResultsList.scss
+++ b/client/web/src/search/results/SearchResultsList.scss
@@ -14,7 +14,7 @@
         background-color: $color-light-bg-2;
         padding: 0.25rem 0.5rem;
         text-align: center;
-        border-bottom: 1px solid $color-light-border;
+        border-bottom: 1px solid var(--border-color);
     }
 
     // In narrow windows, make the results flush with the left/right sides,
@@ -41,7 +41,6 @@
         &__jump-to-top {
             color: $color-text-2;
             background-color: $color-bg-2;
-            border-bottom-color: $color-border;
         }
     }
 }
