--- a/client/web/src/views/ChartViewContent.scss
+++ b/client/web/src/views/ChartViewContent.scss
@@ -13,7 +13,7 @@
     }
 
     .recharts-tooltip-wrapper {
-        border: 1px solid var(--color-border);
+        border: 1px solid var(--border-color);
         color: var(--body-color) !important;
         background: var(--body-bg) !important;
     }
